[package]
name = "move-ts"
version = "0.1.0"
description = "Move TypeScript generators"
homepage = "https://moving.wtf"
repository = "https://github.com/movingco/move-ts"
authors = ["Ian Macalinao <ian@moving.wtf>"]
license = "Apache-2.0"
edition = "2021"
keywords = ["move", "diem", "token"]

[features]
default = []
address20 = ["move-idl/address20"]
address32 = ["move-idl/address32"]

[dependencies]
anyhow = "1.0.42"
serde_json = "1.0.79"
heck = "0.4.0"
move-idl = "0.1.0"
